# adalympics-p2

./: README.md  justfile  pyproject.toml
data/raw/: filtered_crew_dataset.csv
layout/: maps_metodology.docx  usa_whalers_top50_fixed.html  world_whalers_top30.html
output/: cities.csv  location_stats.csv  research_report.md
photos/: azores.json  bedford.json  combined_crew_trio.json  rochester.json
scripts/: cities.py  generate_report.py  location_profile.py
src/: config.py  generate_report.py  logger.py  main.py  style.py
src/graphs/: graph1.py  graph2.py
